changed colors index file

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <h3>Site that is using git actions to deploy</h3>
     </header>
     
-    <section class="col-start-1 col-span-8 row-start-2 bg-blue-300">
+    <section class="col-start-1 col-span-8 row-start-2 bg-red-300">
         <h1>Auto Deployed website</h1>
     </section>
     <aside class="col-start-9 col-span-4 row-start-2 bg-green-300">
@@ -25,7 +25,7 @@
             <li>item 5</li>
         </ul>
     </aside>
-    <footer class="col-start-1 col-span-12 row-start-3 bg-orange-3">
+    <footer class="col-start-1 col-span-12 row-start-3 bg-orange-300">
         <p>&copy; 2025</p>
         <p>Fun with auto deploy</p>
     </footer>
